Add new feature

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,10 @@
     
 }
 
+.bsi   h2{
+    text-align: center !important;
+}
+
 .bsi table td,
 .bsi table th {
     background-color: #fff !important;
