--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,23 +1,16 @@
-.bsi{
-    
-}
+.bsi {}
 
-.bsi table{
+.bsi table {
     width: 99%;
-    
     background-color: transparent;
- 
-     
     display: table;
     border-collapse: collapse !important;
     border-spacing: 2px;
     border-color: grey;
     margin-bottom: 15px;
-    
-    
 }
 
-.bsi   h2{
+.bsi h2 {
     text-align: center !important;
 }
 
@@ -25,15 +18,16 @@
 .bsi table th {
     background-color: #fff !important;
     border: 1px solid #ddd !important;
-      vertical-align: top;
-      padding: 8px;
-  }
-
-.bsi table  > tbody > tr:hover {
-  background-color: #f5f5f5;
+    vertical-align: top;
+    padding: 8px;
 }
 
-.bsi .error {
+.bsi table>tbody>tr:hover {
+    background-color: #f5f5f5;
+}
+
+.bsi .error,
+.bsi td .no {
     color: RED;
 }
 
